--- a/CompFacil.LojaVirtual.UnitTest/CompFacil.LojaVirtual.UnitTest.csproj
+++ b/CompFacil.LojaVirtual.UnitTest/CompFacil.LojaVirtual.UnitTest.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{D1CE0B42-6903-4063-8375-9C079A599914}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CompFacil.LojaVirtual.UnitTest</RootNamespace>
+    <RootNamespace>CompFacil.LojaVirtual.CompFacilUniTest</RootNamespace>
     <AssemblyName>CompFacil.LojaVirtual.UnitTest</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -36,6 +36,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Data.Linq" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
