--- a/CompFacil.LojaVirtual.Web/CompFacil.LojaVirtual.Web.csproj
+++ b/CompFacil.LojaVirtual.Web/CompFacil.LojaVirtual.Web.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="HtmlHelpers\PaginacaoHelpers.cs" />
+    <Compile Include="Models\Paginacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -134,7 +136,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Produto\" />
     <Folder Include="Views\Vitrine\" />
   </ItemGroup>
