--- a/CompFacil.LojaVirtual.Dominio/CompFacil.LojaVirtual.Dominio.csproj
+++ b/CompFacil.LojaVirtual.Dominio/CompFacil.LojaVirtual.Dominio.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entidades\Carrinho.cs" />
     <Compile Include="Entidades\Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositório\EfDbContext.cs" />
