--- a/CompFacil.LojaVirtual.Web/CompFacil.LojaVirtual.Web.csproj
+++ b/CompFacil.LojaVirtual.Web/CompFacil.LojaVirtual.Web.csproj
@@ -147,6 +147,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Categoria\Menu.cshtml" />
     <Content Include="Views\Carrinho\Index.cshtml" />
+    <Content Include="Views\Carrinho\Resumo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
