--- a/CompFacil.LojaVirtual.Dominio/CompFacil.LojaVirtual.Dominio.csproj
+++ b/CompFacil.LojaVirtual.Dominio/CompFacil.LojaVirtual.Dominio.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entidades\Carrinho.cs" />
+    <Compile Include="Entidades\EmailConfigurado.cs" />
+    <Compile Include="Entidades\EmailProcessarPedido.cs" />
     <Compile Include="Entidades\Pedido.cs" />
     <Compile Include="Entidades\Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
