--- a/CompFacil.LojaVirtual.Web/Web.config
+++ b/CompFacil.LojaVirtual.Web/Web.config
@@ -14,6 +14,7 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="Email.EscreverArquivo" value="true"/>
   </appSettings>
   <connectionStrings>
     <add name="EfDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=CompFacilLojaVirtual;Integrated Security=True"
