--- a/CompFacil.LojaVirtual.Dominio/CompFacil.LojaVirtual.Dominio.csproj
+++ b/CompFacil.LojaVirtual.Dominio/CompFacil.LojaVirtual.Dominio.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entidades\Administrador.cs" />
     <Compile Include="Entidades\Carrinho.cs" />
     <Compile Include="Entidades\EmailConfigurado.cs" />
     <Compile Include="Entidades\EmailProcessarPedido.cs" />
